# AATMS

./: .gitignore  CMakeLists-cmake.txt  CMakeLists.txt  README.md  testing.session.sql
.github/: CONTRIBUTING.md
include/: AATMS.h
lib/: placeholder
src/: main.cpp  run.bat  sdl-test.cpp  test.cpp
src/system/: AATMS.h  database.h  generator.h  handler.h  interface.h  loan.h  utility.cpp
src/system/database/: account.cpp  handler.h  schema.h  sql.cpp  sql.h
src/system/database/handler/: account.cpp  history.cpp  init.cpp  loan.cpp
src/system/database/schema/: account.cpp  history.cpp  loan.cpp
src/system/generator/: account.cpp  date.cpp  encryption.cpp  init.cpp  randomizer.cpp
src/system/handler/: account.cpp  history.cpp  init.cpp  loan.cpp  transact.cpp
src/system/handler/schema/: DateTime.cpp
src/system/interface/: init.cpp  text.cpp
src/system/loan/: loan.cpp
tests/: db-test.cpp
tests/SDL2/: better-pong.cpp  pong.cpp  sdl-test.cpp
tests/SQL sessions/: test3.session.sql
